refactor panel out of app (also, stage all changes)

--- a/i18n/i18n.properties
+++ b/i18n/i18n.properties
@@ -3,5 +3,7 @@ appTitle=SAPUI5 Walkthrough
 appDescription=A simple walkthrough
 
 #Hello Panel
-showHelloButtonText=Sag Hallo
-helloMsg=Hallo {0}
+showHelloButtonText=Say Hello
+helloMsg=Hello {0}
+homePageTitle=Walkthrough
+helloPanelTitle=Hello World
